Z-index module fixed

--- a/src/components/DetailsView/DetailsView.module.scss
+++ b/src/components/DetailsView/DetailsView.module.scss
@@ -1,3 +1,5 @@
+@import "/src/styling/z-index.module.scss";
+
 .dialog {
   width: inherit;
   height: 100%;
@@ -6,13 +8,13 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 100;
   padding: 0;
   border: none;
   border-radius: 1rem;
   background-color: var(--sidebar_background_color);
   display: flex;
   flex-direction: column;
+  @include z-index(dialog);
 
   &::backdrop {
     background-color: rgba(0, 0, 0, 0.5);
