--- a/src/layouts/FavoritesLayout/FavoritesLayout.module.scss
+++ b/src/layouts/FavoritesLayout/FavoritesLayout.module.scss
@@ -1,3 +1,5 @@
+@import "/src/styling/z-index.module.scss";
+
 .componentsContainer {
     padding: 0 1.5rem;
 }
@@ -31,10 +33,8 @@ h1 {
     gap: 0.375rem;
     border-radius: 6.1875rem;
 
-
     background-color: var(--menu_background_color);
     box-shadow: 0 0 1em var(--box-shadow);
-    z-index: 100;
 }
 
 .menuButton img {
@@ -47,16 +47,17 @@ h1 {
     width: 100vw;
     height: 100vh;
     background-color: black;
-    opacity: .5;
+    opacity: 0.5;
 
     transform: translateX(-100%);
 
-    z-index: 999999999;
-    transition: .5s;
+    transition: 0.5s;
 
     position: fixed;
     top: 0;
     left: 0;
+
+    @include z-index(navigation-shadow);
 }
 
 .closeSidebarButton.menuIsOpened {
