--- a/src/layouts/NotFoundLayout/NotFoundLayout.module.scss
+++ b/src/layouts/NotFoundLayout/NotFoundLayout.module.scss
@@ -1,3 +1,5 @@
+@import "/src/styling/z-index.module.scss";
+
 .container {
   width: 100%;
   height: 100%;
@@ -22,12 +24,12 @@
     top: 0;
     left: 0;
     opacity: 0.9;
-    z-index: 1;
+    @include z-index(basic);
   }
 
   & * {
     position: relative;
-    z-index: 2;
+    @include z-index(secondary);
   }
 }
 
